--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
-  <!-- Three.js & GLTFLoader from CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://unpkg.com/three@0.150.1/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
   <script src="script.js"></script>
