--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Butterfly Viewer</title>
+  <title>Butterfly Viewer (Fixed)</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
-  <script src="https://unpkg.com/three@0.150.1/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
+  <!-- three.js & GLTFLoader 직접 포함 -->
+  <script src="three.min.js"></script>
+  <script src="GLTFLoader.min.js"></script>
 </head>
 <body>
   <script src="script.js"></script>
