--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Butterfly Viewer (Fixed)</title>
+  <title>Butterfly Viewer</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
-  <!-- three.js & GLTFLoader 직접 포함 -->
-  <script src="three.min.js"></script>
-  <script src="GLTFLoader.min.js"></script>
 </head>
 <body>
-  <script src="script.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
